<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">大学恋爱</string>
    <string name="action_feed">意见反馈</string>
    <string name="action_group_chat">发起群聊</string>
    <string name="action_add_friend">添加朋友</string>
    <string name="action_scan">扫一扫</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="tab_main">首页</string>
    <string name="tab_contact">通讯录</string>
    <string name="tab_find">秀场</string>
    <string name="tab_me">我</string>

    <string name="register">手机号码是登录及取回密码的凭证，请确保正确。</string>

    <string name="default_progress_dialog_message">请稍候&#8230;</string>
    <string name="common_widget_dialog_default_title">温馨提示</string>
    <string name="widget_media_remove">移除</string>

    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="saving_image">正在保存图片&#8230;</string>
    <string name="preparing_card">正在准备存储卡</string>
    <string name="no_storage_card">没有存储卡!</string>
    <string name="not_enough_space">没有空间!</string>

    <string name="common_please_choose">请选择</string>

    <string name="widget_emoji_default">默认</string>

    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>

    <string name="contact_search_hint">搜索</string>

    <string name="feed_anno">请尽量详细描述问题，LOVE会第一时间帮您解决！</string>
    <string name="feed_email">请输入可以联系您的QQ或邮箱</string>

</resources>
